--- a/DiscordClone/appsettings.json
+++ b/DiscordClone/appsettings.json
@@ -14,6 +14,11 @@
   },
   "ConnectionStrings": {
     "ApplicationContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DiscordClone;Trusted_Connection=True;MultipleActiveResultSets=true"
-      },
-    "AllowedHosts": "*"
+  },
+  "AllowedHosts": "*",
+  //"Jwt": {
+  //  "Key": "TwojSekretnyKluczJWT",
+  //  "Issuer": "TwojaDomena.com",
+  //  "Audience": "TwojaDomena.com"
+  //}
 }
