auth/usercontroller complete

--- a/DiscordClone/DiscordClone.csproj
+++ b/DiscordClone/DiscordClone.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
@@ -25,7 +26,6 @@
 
   <ItemGroup>
     <Folder Include="client-app\src\app\API\" />
-    <Folder Include="client-app\src\app\Models\" />
     <Folder Include="Views\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
