--- a/DiscordClone/client-app/package.json
+++ b/DiscordClone/client-app/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.4",
+    "axios": "^1.7.7",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
