--- a/DiscordClone/DiscordClone.csproj
+++ b/DiscordClone/DiscordClone.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Nowy folder\**" />
+    <Content Remove="wwwroot\Nowy folder\**" />
+    <EmbeddedResource Remove="wwwroot\Nowy folder\**" />
+    <None Remove="wwwroot\Nowy folder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
@@ -27,6 +34,7 @@
   <ItemGroup>
     <Folder Include="client-app\src\app\API\" />
     <Folder Include="Views\" />
+    <Folder Include="wwwroot\avatars\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
