--- a/DiscordClone/client-app/package.json
+++ b/DiscordClone/client-app/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.4",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "axios": "^1.7.7",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
